--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,17 +16,14 @@ jobs:
           fetch-depth: 0
       - name: build
         run: make 
-      - name: version
-        run: echo $(date)
-        id: version
       - name: release
         uses: actions/create-release@v1
         id: create_release
         with:
           draft: false
           prerelease: false
-          release_name: ${{ steps.version.outputs.version }}
-          tag_name: ${{ github.ref }}
+          release_name: ${{ github.run_number }}
+          tag_name: ${{ github.run_number }}
         env:
           GITHUB_TOKEN: ${{ github.token }}
       - name: upload darwin artifact
